Update color theme and fix spacing of data file

--- a/css/stylesheet-customizations.scss
+++ b/css/stylesheet-customizations.scss
@@ -7,12 +7,12 @@
 
 // Customize the background color
 body {
-  background: linear-gradient(to bottom right, #8AB9B5, whitesmoke);;
+  background: linear-gradient(to bottom right, #ECE2D0, whitesmoke);;
 }
 
 // Customize the menubar color
 .ui.menu {
-   background: #8AB9B5;
+   background: #ECE2D0;
 }
 
 // Customize the home page icon colors
